[package]
name = "wsvpn"
version = "0.1.0-dev"
edition = "2018"
authors = ["Will Boyce <me@willboyce.com>"]
description = ""
license = ""
repository = "https://github.com/wrboyce/wsvpn"
readme = ""
keywords = []
categories = []

[dependencies]
clap = "2.33.3"
etherparse = "0.8.2"
ipnetwork = "0.14.0"
log = "0.4.8"
pretty_env_logger = "0.3"
tun-tap-mac = "0.1.2"
ws = "0.9.0"